WebSecurity fixed/refactored, MapUtil.add refactored