@@ -25,6 +25,7 @@ set OFFLINE=-Dtsl2nano.offline=true
 rem set UH=-Denv.user.home=true
 rem set USERDIR=-Duser.dir=%PRJ%
 rem set LANG=-Duser.country=FR -Duser.language=fr -Duser.language.format=fr
+rem set COMPAT=-Djava.locale.providers=COMPAT,CLDR REM use locale format of JDK8
 set ENCODING=-Dfile.encoding=UTF-8
 set JSU_ENC=-Dsun.jnu.encoding=UTF-8
 rem set DEBUG="-agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n"
@@ -37,7 +38,25 @@ set IPv4="-Djava.net.preferIPv4Stack=true"
 rem set SILENT=true
 if "%SILENT%"=="true" (set JAVA=@start javaw) else (set JAVA=java)
 set SECURITY_LEAK=-Dlog4j2.formatMsgNoLookups=true
-set MODULES=" --add-modules=ALL-SYSTEM --illegal-access=warn --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/javax.security.auth=ALL-UNNAMED"
+set MODULES=" --add-modules=ALL-SYSTEM --illegal-access=warn \
+    --add-opens java.base/java.lang=ALL-UNNAMED \
+    --add-opens java.base/java.util=ALL-UNNAMED \
+    --add-opens java.base/java.text=ALL-UNNAMED \
+    --add-opens java.base/java.time.format=ALL-UNNAMED \
+    --add-opens java.base/java.lang.reflect=ALL-UNNAMED \
+    --add-opens java.base/sun.reflect.annotation=ALL-UNNAMED \
+    --add-opens jdk.unsupported/jdk.internal.module=ALL-UNNAMED \
+    --add-exports jdk.unsupported/jdk.internal.module=ALL-UNNAMED \
+    --add-opens java.base/sun.security.x509=ALL-UNNAMED \
+    --add-opens java.base/javax.security.auth=ALL-UNNAMED \
+    --add-opens java.base/java.io=ALL-UNNAMED \
+    --add-opens java.base/sun.nio.ch=ALL-UNNAMED \
+    --add-opens java.base/java.net=ALL-UNNAMED \
+    --add-opens java.base/sun.security.ssl=ALL-UNNAMED \
+    --add-opens java.xml/javax.xml.stream.events=ALL-UNNAMED \
+    --add-opens java.xml/org.w3c.dom=ALL-UNNAMED \
+    --add-opens java.xml/javax.xml.namespace=ALL-UNNAMED \
+    --add-exports java.management/sun.management=ALL-UNNAMED"
 
-%JAVA% %MODULES% %SECURITY_LEAK% %IPv4% %OFFLINE% %LANG% %ENCODING% %JSU_ENC% %USERDIR% %NANO_DEBUG% %AGENT% %PROXY% %PROFILER% %JAVA_OPTS% %DEBUG% %UH% %RESTART_ALL% -jar %NAME%-%VERSION%%EXTENSION%.jar %PRJ% %PORT%  %LOG%
+%JAVA% %MODULES% %SECURITY_LEAK% %IPv4% %OFFLINE% %COMPAT% %LANG% %ENCODING% %JSU_ENC% %USERDIR% %NANO_DEBUG% %AGENT% %PROXY% %PROFILER% %JAVA_OPTS% %DEBUG% %UH% %RESTART_ALL% -jar %NAME%-%VERSION%%EXTENSION%.jar %PRJ% %PORT%  %LOG%
 if not "%SILENT%"=="true" pause
