@@ -40,6 +40,7 @@ EXTENSION="-standalone"
 #UH=-Denv.user.home=true
 #USERDIR=-Duser.dir=$PRJ
 #LLANG=-Duser.country=FR -Duser.language=fr -Duser.language.format=fr
+#COMPAT=-Djava.locale.providers=COMPAT,CLDR # use locale formats of JDK8
 ENCODING=-Dfile.encoding=UTF-8
 JSU_ENC=-Dsun.jnu.encoding=UTF-8
 #DEBUG="-agentlib:jdwp=transport=dt_socket,address=localhost:8787,server=y,suspend=n"
@@ -56,9 +57,27 @@ IPv4="-Djava.net.preferIPv4Stack=true"
 #INTERNAL_DB=-Dapp.database.internal.server.run=true
 #TSL_SERVICE=-Dservice.url=https://tsl2-timesheet.herokuapp.com:5000
 SECURITY_LEAK=-Dlog4j2.formatMsgNoLookups=true
-MODULES=" --add-modules=ALL-SYSTEM --illegal-access=warn --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/javax.security.auth=ALL-UNNAMED"
+MODULES=" --add-modules=ALL-SYSTEM --illegal-access=warn \
+    --add-opens java.base/java.lang=ALL-UNNAMED \
+    --add-opens java.base/java.util=ALL-UNNAMED \
+    --add-opens java.base/java.text=ALL-UNNAMED \
+    --add-opens java.base/java.time.format=ALL-UNNAMED \
+    --add-opens java.base/java.lang.reflect=ALL-UNNAMED \
+    --add-opens java.base/sun.reflect.annotation=ALL-UNNAMED \
+    --add-opens jdk.unsupported/jdk.internal.module=ALL-UNNAMED \
+    --add-exports jdk.unsupported/jdk.internal.module=ALL-UNNAMED \
+    --add-opens java.base/sun.security.x509=ALL-UNNAMED \
+    --add-opens java.base/javax.security.auth=ALL-UNNAMED \
+    --add-opens java.base/java.io=ALL-UNNAMED \
+    --add-opens java.base/sun.nio.ch=ALL-UNNAMED \
+    --add-opens java.base/java.net=ALL-UNNAMED \
+    --add-opens java.base/sun.security.ssl=ALL-UNNAMED \
+    --add-opens java.xml/javax.xml.stream.events=ALL-UNNAMED \
+    --add-opens java.xml/org.w3c.dom=ALL-UNNAMED \
+    --add-opens java.xml/javax.xml.namespace=ALL-UNNAMED \
+    --add-exports java.management/sun.management=ALL-UNNAMED"
 
-java $MODULES $SECURITY_LEAK $IPv4 $OFFLINE $UH $LLANG $ENCODING $JSU_ENC $USERDIR $NANO_DEBUG $AGENT $PROXY  $DEBUG \
+java $MODULES $SECURITY_LEAK $IPv4 $OFFLINE $UH $COMPAT $LLANG $ENCODING $JSU_ENC $USERDIR $NANO_DEBUG $AGENT $PROXY  $DEBUG \
 	$UH $HPROF_CPU $HPROF_HEAP $PROFILER $NO_DB_CHECK $NOSTARTPAGE $INTERNAL_DB $TSL_SERVICE \
 	$JAVA_OPTS $RESTART_ALL -jar $NAME-$VERSION$EXTENSION.jar $PRJ $PORT $LOG 
 #if [ not "$NOPAUSE" == "nopause" ] then 'read -p' fi
